# distro-delves

./: .gitignore  .travis.yml  404.html  README.md  Rakefile  _config.yml  index.html
.github/ISSUE_TEMPLATE/: ---correction-request.md  ---distro-review-request.md  ---script-enhancement.md
_data/: settings.yml
_pages/: about.md
_posts/: 2018-06-30-demo-post.md  2020-04-27-ep-20.md
_projects/: 2018-06-30-demo-project.md
_site/: 404.html  about.html  index.html  sitemap.xml
_site/blog/: demo-post.html  ep-20.html  episode-2-ubuntu-focal-fossa-2004-lts.html  index.html
_site/project/: demo-project.html  season-two.html
androgee/: README.md  destroy.rb  install_deps.sh
androgee/lib/: gui.rb  helpers.rb
benchmarker/: bootstrap.sh  mangohud.sh  pts.sh  shared.sh
benchmarker/dd-realworld/: suite-definition.xml
benchmarker/salts/: init.sls  pts_bootstrap.sls  pts_suites.sls
benchmarks/pts/: Dockerfile  runner.sh  user-config.xml
blog/: index.html
checklists/: README.md  live.md  non-unix.md  soc.md  std-mesa.md  std-nvidia.md
content/: contents.lr
custom_tools/: 2020simulatormenu.sh
custom_tools/cpustress_v1/: Makefile  stress.c  stress_cpu_x64
distrodelves/: distro-delves.lektorproject
distrodelves/content/: contents.lr
iac/: .terraform.lock.hcl  networking.tf
media/: README.md
querier/: LICENSE  pyproject.toml  querier.py  querierdd.py
scripts/: .gitignore  README.md  bench.sh  bootstrap.sh  other.md  shared.sh  soc.md  standard.md
seasons/: README.md
tests/: test.conf.7z
website/: 404.html  Gemfile  _config.yml
(+173 files in other folders)
