[tool.poetry]
name = "querierdd"
version = "0.2.3"
description = "Query the system and present details in an asthetically pleasing way."
authors = ["egee-irl <brian@egee.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
click = "^8.0.1"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
black = "^21.7b0"
flake8 = "^3.9.2"

[tool.poetry.scripts]
querier = "querierdd:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
